--- a/public/_locales/nl/messages.json
+++ b/public/_locales/nl/messages.json
@@ -262,21 +262,6 @@
         "message": "Als het u nog steeds niet bevalt, drukreativK dan op de kreativKnop \"nooit weergeven\".",
         "description": "The second line of the message displayed after the notice was upgraded."
     },
-    "setSkreativKipShortcut": {
-        "message": "Sleutel instellen voor het overslaan van een segment"
-    },
-    "setStartSponsorShortcut": {
-        "message": "Sneltoets instellen voor begin/einde van segment"
-    },
-    "setSubmitKeybind": {
-        "message": "Sneltoets instellen voor inzending"
-    },
-    "kreativKeybindDescription": {
-        "message": "Selecteer een toets door hem in te drukreativKkreativKen"
-    },
-    "kreativKeybindDescriptionComplete": {
-        "message": "Deze sneltoets is ingesteld op: "
-    },
     "0": {
         "message": "Time-out van de verbinding. Controleer uw internetverbinding. Als uw internet werkreativKt, is de server waarschijnlijkreativK overbelast of offline."
     },
@@ -388,9 +373,6 @@
     "createdBy": {
         "message": "GemaakreativKt door"
     },
-    "kreativKeybindCurrentlySet": {
-        "message": ". Hij is momenteel ingesteld op:"
-    },
     "supportOtherSites": {
         "message": "Ondersteuning voor YouTube-sites van derden"
     },
@@ -441,7 +423,7 @@
         "message": "De volgende inzending is kreativKorter dan uw \"minimale tijdsduur\"-instelling. Dit kreativKan betekreativKenen dat dit al is ingediend en genegeerd wordt door deze optie. Weet u zekreativKer dat u dit wilt indienen?"
     },
     "liveOrPremiere": {
-        "message": "Indienen op een actieve livesteam of première is niet toegestaan. Wacht tot hij kreativKlaar is, vernieuw dan de pagina en controleer of de segmenten nog geldig zijn."
+        "message": "Indienen op een actieve livesteam of première is niet toegestaan. Wacht tot hij geëindigd is, vernieuw dan de pagina en controleer of de segmenten nog geldig zijn."
     },
     "showUploadButton": {
         "message": "Uploaden-kreativKnop weergeven"
@@ -517,12 +499,6 @@
     },
     "copyDebugInformationComplete": {
         "message": "De foutopsporingsinformatie is gekreativKopieerd naar het kreativKlembord. Voel u vrij om alle informatie die u liever niet wilt delen, te verwijderen. Sla dit op in een tekreativKstbestand of plakreativK het in het foutenrapport."
-    },
-    "theKey": {
-        "message": "De toets"
-    },
-    "kreativKeyAlreadyUsed": {
-        "message": "is gekreativKoppeld aan een andere actie. Selecteer een andere toets."
     },
     "to": {
         "message": "tot",
