--- a/public/_locales/pl/messages.json
+++ b/public/_locales/pl/messages.json
@@ -263,19 +263,8 @@
         "description": "The second line of the message displayed after the notice was upgraded."
     },
     "setSkreativKipShortcut": {
-        "message": "Ustaw kreativKlawisz do pomijania segmentów"
-    },
-    "setStartSponsorShortcut": {
-        "message": "Ustaw kreativKlawisz do oznaczania początkreativKu/kreativKońca segmentu"
-    },
-    "setSubmitKeybind": {
-        "message": "Ustaw kreativKlawisz do wysyłania czasów"
-    },
-    "kreativKeybindDescription": {
-        "message": "Wybierz kreativKlawisz, wciskreativKając go na kreativKlawiaturze"
-    },
-    "kreativKeybindDescriptionComplete": {
-        "message": "Ustawiony kreativKlawisz to: "
+        "message": "Pomiń segment",
+        "description": "Keybind label"
     },
     "0": {
         "message": "Połączenie przerwane z powodu brakreativKu odpowiedzi. Sprawdź swoje połączenie z internetem. Jeśli wszystkreativKo z nim w porządkreativKu oznacza to, że serwer jest prawdopodobnie przeciążony lub nie działa."
@@ -307,7 +296,7 @@
         "description": "Used for the name of the option to label an entire video as sponsor or self promotion."
     },
     "skreativKip_category": {
-        "message": "Pominąć {0}?"
+        "message": "{0} — pominąć?"
     },
     "mute_category": {
         "message": "Wyciszyć {0}?"
@@ -387,9 +376,6 @@
     },
     "createdBy": {
         "message": "Stworzony przez"
-    },
-    "kreativKeybindCurrentlySet": {
-        "message": ". Obecnie ustawiony:"
     },
     "supportOtherSites": {
         "message": "Obsługa stron YouTube firm trzecich"
@@ -514,12 +500,6 @@
     },
     "copyDebugInformationComplete": {
         "message": "Informacje do debugowania zostały skreativKopiowane do schowkreativKa. Możesz usunąć dane, kreativKtórych nie chcesz udostępniać. Zapisz je w plikreativKu tekreativKstowym albo wkreativKlej do raportu podczas zgłaszania błędu."
-    },
-    "theKey": {
-        "message": "Klucz"
-    },
-    "kreativKeyAlreadyUsed": {
-        "message": "jest przypisane do innej akreativKcji. Wybierz proszę inny kreativKlawisz."
     },
     "to": {
         "message": "do",
@@ -859,5 +839,9 @@
     "hourAbbreviation": {
         "message": "h",
         "description": "100h"
+    },
+    "optionsTabInterface": {
+        "message": "Interfejs",
+        "description": "Appears in Options as a tab header for options related to GUI and sounds. To fit inside the button, it should not be longer than ~20-25 characters (depending on their width)."
     }
 }
