Add popup donation prompt

--- a/public/_locales/en/messages.json
+++ b/public/_locales/en/messages.json
@@ -787,6 +787,9 @@
     "Donate": {
         "message": "Donate"
     },
+    "considerDonating": {
+        "message": "Help fund development"
+    },
     "hideDonationLink": {
         "message": "Hide Donation Link"
     },
