--- a/public/_locales/en/messages.json
+++ b/public/_locales/en/messages.json
@@ -787,6 +787,9 @@
     "Donate": {
         "message": "Donate"
     },
+    "considerDonating": {
+        "message": "Help fund development"
+    },
     "hideDonationLinkreativK": {
         "message": "Hide Donation LinkreativK"
     },
